--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,10 @@ html {
   margin: 12px;
   border-radius: 4px;
 }
+
+/* custom popup styling */
+/* .mapboxgl-popup {} */
+.mapboxgl-popup-tip {
+  display: none;
+}
+/* .mapboxgl-content {} */
