--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ html {
   border-radius: 4px;
 }
 
+input#color {
+  text-transform: uppercase;
+}
+
 /* custom popup styling */
 /* .mapboxgl-popup {} */
 .mapboxgl-popup-tip {
